Bug 514026 - Incorrect sharing QR codes generated for WPA3 networkks
Summary: Incorrect sharing QR codes generated for WPA3 networkks
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: 6.5.4
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-31 23:03 UTC by dodoradio
Modified: 2026-01-06 15:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dodoradio 2025-12-31 23:03:56 UTC
SUMMARY
The networking applet seems to generate non-compliant QR codes for WPA3 networks. 

STEPS TO REPRODUCE
1. Connect to a WPA3 Personal network
2. Open the Networks applet, click 'share' on the WPA3 network
3. Scan the QR code with another device (in this case it was a Sony Xperia 5ii running Android 12)

OBSERVED RESULT
the scanning device fails to recognise the QR code. (In the case of the Android 12 Sony this was a message saying 'this QR code is not supported'

EXPECTED RESULT
The scanning device connects to the WPA3 network

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: fedora 43 kernel 6.17.12-300.fc43.x86_64
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1

ADDITIONAL INFORMATION
Inspecting the QR code text, the 'T' field is 'T:SAE;' (the redacted QR code contents are 'WIFI:S:xxx;T:SAE;P:xxx;;'). The URI format for WPA3 is described in the wpa3 spec https://www.wi-fi.org/system/files/WPA3%20Specification%20v3.1.pdf section 7.3, and SAE doesn't seem to be a valid content for the T field. This behaviour seems to have been introduced in https://invent.kde.org/plasma/plasma-nm/-/commit/764cb342ea1b95487a7a065ae93f2779b91680a3 , and it seems that the generated QR code never got scanned when testing.
Comment 1 Bug Janitor Service 2026-01-02 09:18:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/503
Comment 2 David Edmundson 2026-01-02 09:19:32 UTC
thanks
Comment 3 David Edmundson 2026-01-06 15:50:53 UTC
Git commit 7f3434814074cc85b9e09d5134c45c4437efb74a by David Edmundson.
Committed on 06/01/2026 at 14:40.
Pushed by davidedmundson into branch 'master'.

Use correct URL for QR codes for WPA3 networks

The URL format as described at
https://www.wi-fi.org/system/files/WPA3%20Specification%20v3.1.pdf (7.3)
is that the type should be "WPA" for password based authentication.

The same paragraph explicitly mentions SAE later so the spec must be up-to-date.

M  +1    -3    libs/handler.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/7f3434814074cc85b9e09d5134c45c4437efb74a
Comment 4 Nate Graham 2026-01-06 15:57:46 UTC
Git commit 2ade8f901614896042eabbc6dd251d3c133957e3 by Nate Graham.
Committed on 06/01/2026 at 15:57.
Pushed by ngraham into branch 'Plasma/6.5'.

Use correct URL for QR codes for WPA3 networks

The URL format as described at
https://www.wi-fi.org/system/files/WPA3%20Specification%20v3.1.pdf (7.3)
is that the type should be "WPA" for password based authentication.

The same paragraph explicitly mentions SAE later so the spec must be up-to-date.


(cherry picked from commit 7f3434814074cc85b9e09d5134c45c4437efb74a)

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>

M  +1    -3    libs/handler.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/2ade8f901614896042eabbc6dd251d3c133957e3