Use correct URL for QR codes for WPA3 networks

The URL format as described at
https://www.wi-fi.org/system/files/WPA3%20Specification%20v3.1.pdf (7.3)
is that the type should be "WPA" for password based authentication.

The same paragraph explicitly mentions SAE later so the spec must be up-to-date.

BUG: 514026


(cherry picked from commit 7f3434814074cc85b9e09d5134c45c4437efb74a)

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>